[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/network/Multiplayer.gd" type="Script" id=1]
[ext_resource path="res://fonts/themes/Blocky_text.tres" type="Theme" id=2]
[ext_resource path="res://visual/GUI/buttons/ex.png" type="Texture" id=3]
[ext_resource path="res://visual/GUI/buttons/ex_pressed.png" type="Texture" id=4]
[ext_resource path="res://fonts/themes/block_small.tres" type="Theme" id=5]
[ext_resource path="res://visual/GUI/Frames/frame_2.png" type="Texture" id=6]
[ext_resource path="res://fonts/themes/blocky_med.tres" type="Theme" id=7]

[sub_resource type="Animation" id=1]
resource_name = "user_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Frame/username:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="multiplayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 315.0 ]
}

[node name="Frame" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.5
margin_top = -179.5
margin_right = 261.5
margin_bottom = 179.5
rect_pivot_offset = Vector2( 11.5454, -6.02179 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="TabContainer" type="TabContainer" parent="Frame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.5
margin_top = -77.5
margin_right = 219.5
margin_bottom = 123.5
theme = ExtResource( 2 )

[node name="JOIN" type="Tabs" parent="Frame/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 25.0
margin_right = -4.0
margin_bottom = -4.0

[node name="join_ip_address" type="LineEdit" parent="Frame/TabContainer/JOIN"]
margin_left = 18.0
margin_top = 152.0
margin_right = 247.0
margin_bottom = 169.0
theme = ExtResource( 2 )
align = 1
placeholder_alpha = 0.497

[node name="Label2" type="Label" parent="Frame/TabContainer/JOIN/join_ip_address"]
margin_left = -11.0
margin_top = -10.0
margin_right = 43.0
margin_bottom = -3.0
text = "IP ADDRESS:"

[node name="Join_Server" type="Button" parent="Frame/TabContainer/JOIN/join_ip_address"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 165.0
margin_top = -6.5
margin_right = 295.0
margin_bottom = 6.5
theme = ExtResource( 2 )
text = "Join Server"

[node name="JoinGrid" type="GridContainer" parent="Frame/TabContainer/JOIN"]
margin_left = 19.0
margin_top = 34.0
margin_right = 427.0
margin_bottom = 136.0

[node name="HOST" type="Tabs" parent="Frame/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="host_server" type="LineEdit" parent="Frame/TabContainer/HOST"]
margin_left = 18.5
margin_top = 65.5
margin_right = 196.5
margin_bottom = 82.5
theme = ExtResource( 2 )
placeholder_alpha = 0.497

[node name="Label2" type="Label" parent="Frame/TabContainer/HOST/host_server"]
margin_left = -11.0
margin_top = -10.0
margin_right = 43.0
margin_bottom = -3.0
text = "SERVER NAME:"

[node name="server_pass" type="LineEdit" parent="Frame/TabContainer/HOST"]
margin_left = 18.5
margin_top = 97.5
margin_right = 196.5
margin_bottom = 114.5
theme = ExtResource( 2 )
placeholder_alpha = 0.497

[node name="Label2" type="Label" parent="Frame/TabContainer/HOST/server_pass"]
margin_left = -11.0
margin_top = -10.0
margin_right = 43.0
margin_bottom = -3.0
text = "SERVER PASSWORD (OPTIONAL):"

[node name="max_players" type="SpinBox" parent="Frame/TabContainer/HOST"]
margin_left = 19.0
margin_top = 130.0
margin_right = 117.0
margin_bottom = 147.0
theme = ExtResource( 2 )
min_value = 1.0
max_value = 6.0
value = 1.0
align = 1

[node name="Label2" type="Label" parent="Frame/TabContainer/HOST/max_players"]
margin_left = -11.0
margin_top = -10.0
margin_right = 43.0
margin_bottom = -3.0
text = "MAX PLAYERS:"

[node name="HostServer" type="Button" parent="Frame/TabContainer/HOST/max_players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 229.5
margin_top = -7.0
margin_right = 359.5
margin_bottom = 6.0
theme = ExtResource( 2 )
text = "Host Server"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TopLabel" type="Label" parent="Frame"]
modulate = Color( 0.631373, 1, 0.654902, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -143.0
margin_top = 70.0
margin_right = 143.0
margin_bottom = 97.0
theme = ExtResource( 5 )
text = "Multiplayer"
align = 1

[node name="username" type="LineEdit" parent="Frame"]
margin_left = 63.5
margin_top = 137.5
margin_right = 241.5
margin_bottom = 154.5
theme = ExtResource( 2 )
placeholder_alpha = 0.497

[node name="Label" type="Label" parent="Frame/username"]
margin_left = -10.0
margin_top = -10.0
margin_right = 44.0
margin_bottom = -3.0
text = "USERNAME:"

[node name="UserColor" type="ColorPickerButton" parent="Frame/username"]
margin_left = 176.0
margin_top = -5.0
margin_right = 209.0
margin_bottom = 22.0
focus_mode = 0
flat = true

[node name="X_Button" type="TextureButton" parent="Frame"]
margin_left = 24.5
margin_top = 58.5
margin_right = 54.5
margin_bottom = 86.5
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="LoadingScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.329412 )

[node name="Label" type="Label" parent="LoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -13.5
margin_right = 130.0
margin_bottom = 13.5
theme = ExtResource( 7 )
text = "LOADING..."
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/user_flash = SubResource( 1 )

[connection signal="pressed" from="Frame/TabContainer/JOIN/join_ip_address/Join_Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="Frame/TabContainer/HOST/max_players/HostServer" to="." method="_on_HostServer_pressed"]
[connection signal="color_changed" from="Frame/username/UserColor" to="." method="_on_UserColor_color_changed"]
[connection signal="pressed" from="Frame/X_Button" to="." method="_on_X_Button_pressed"]
